product/deployment/product.service.traefik-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-go-product
  namespace: cloud-native-go
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  selector:
    app: cloud-native-go-product

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-native-go-product
  namespace: cloud-native-go
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: product.cng.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-native-go-product
                port:
                  number: 80
